package app.dtos;

public class IngredientRequestDTO
{
}
