package app.dtos.shopping;

public record ShoppingListDTO()
{
}
