package app.entities;

public class User
{
}
