package app.enums;

public enum Station
{
    HOT,
    STARTER,
    COLD,
    SALAD,
    BAKERY;
}
